code cleaning (comments, unused code, etc.), add logging